// Code generated by internal/codegen. You may edit parts of this file.
// Field numbers and custom options will be preserved for matching field names.
// All other modifications will be lost.
syntax = "proto3";
package runtimeconfig;

import "github.com/rancher/opni/internal/codegen/cli/cli.proto";
import "github.com/rancher/opni/internal/cortex/config/validation/limits.proto";

option go_package      = "github.com/rancher/opni/internal/cortex/config/runtimeconfig";
option (cli.generator) = {
  generate:          true
  generate_deepcopy: true
};

message RuntimeConfigValues {
  map<string, validation.Limits> overrides                                = 1 [(cli.flag) = {skip: true}];
  KvMultiRuntimeConfig           multi_kv_config                          = 2;
  optional bool                  ingester_stream_chunks_when_using_blocks = 3;
  IngesterInstanceLimits         ingester_limits                          = 4;
}

message IngesterInstanceLimits {
  optional double max_ingestion_rate         = 1;
  optional int64  max_tenants                = 2;
  optional int64  max_series                 = 3;
  optional int64  max_inflight_push_requests = 4;
}

message KvMultiRuntimeConfig {
  optional string primary        = 1;
  optional bool   mirror_enabled = 2;
}
